better data driven abilities, support for individual abilities data